Fix: gem hanmotoを利用したエラー表示に変更

--- a/public/500.html
+++ b/public/500.html
@@ -1,66 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>We're sorry, but something went wrong (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
-
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
-
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
-
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>We're sorry, but something went wrong.</h1>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html><head><meta name="csrf-param" content="authenticity_token" />
+<meta name="csrf-token" content="h03TQc1WBvnQ7rDZnH8fLj5KphAUMUfJE+eyEumXPW+474j3HbtcbK5852UkNivNf1UdRo34+wWysBJ91sSYAA==" /><meta content="width=device-width, initial-scale=1" name="viewport" /><meta charset="utf-8" /><link rel="stylesheet" media="screen" href="https://unpkg.com/bulmaswatch/darkly/bulmaswatch.min.css" /><script src="/packs/js/application-79764e4c49c40b898354.js" data-turbolinks-track="reload"></script><title>Buildesk（ビルデスク）</title>
+<link rel="icon" type="image/x-icon" href="http://example.org/images/buildesk_favicon.png">
+<meta property="og:site_name" content="Buildesk（ビルデスク）">
+<meta property="og:description" content="<span class=&quot;translation_missing&quot; title=&quot;translation missing: ja.public_pages.500.og_description&quot;>Og Description</span>">
+<meta property="og:url" content="http://example.org">
+<meta property="og:image" content="http://example.org/images/app_ogp.png">
+<meta property="og:og_title" content="<span class=&quot;translation_missing&quot; title=&quot;translation missing: ja.public_pages.500.og_title&quot;>Og Title</span>">
+<meta name="twitter:card" content="summary_large_image"></head><body><html class="has-navbar-fixed-top"></html><header aria-label="main navigation" class="is-dark navbar is-fixed-top" role="navigation"><div class="container"><div class="navbar-brand"><div class="navbar-item"><a data-turbolinks="false" href="/"><img src="/images/buildesk_logo.png" width="112" height="28" /></a></div></div></div></header><main><div class="container"><section class="section"><div class="columns is-vcentered is-marginless"><div class="column is-offset-1"><div class="content"><p class="title is-4 has-text-weight-bold is-spaced">サーバーエラーが発生しました。</p><p>サーバーの問題でお探しのページを表示できません。<br />再度時間をおいてアクセスしてください。</p><br /><div class="field"><p class="control"><a class="button is-primary has-text-weight-semibold" data-turbolinks="false" href="javascript:history.back()">戻る</a></p></div></div></div><div class="column"><br /><img src="/images/500_image.png" /></div></div></section></div></main><footer class="footer"><div class="content has-text-centered"><p>Copyright © <strong><a class="has-text-light" href="/">Buildesk</a></strong></p></div></footer></body></html>
